# calc-rs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: CI.yml  test.yml
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
rust-lib/src/compiler/: interpreter.rs
src/: ast.rs  lib.rs  parser.rs
src/compiler/: interpreter.rs
test/: calculator.py
